--- a/app/globals.css
+++ b/app/globals.css
@@ -2,4 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
+*{
+ scroll-behavior: smooth;   
+}
+/* Add this CSS to your stylesheet */
+@keyframes fade-in {
+    from {
+      opacity: 0;
+      color: black;
+      transform: scale(1, 1);
+    }
+    to {
+      opacity: 1;
+      color:gray;
+      transform: scale(2, 2);
 
+    }
+  }
+  
+  .animate-fade-in {
+    animation: fade-in .5s ease ;
+  }
+  
